feat: Create Waitlist page and redirect all CTAs to it - Add new Waitlist page with HubSpot form integration - Update all CTA buttons to point to waitlist instead of contact/demo - Update Header navigation CTA buttons - Update main page CTA section - Update pricing page CTAs and subscription buttons - Update PricingTiers component subscription buttons - Add waitlist translation keys for English and Finnish - Follow @05-brand.mdc rules with proper heading capitalization and ICP terminology

--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -269,6 +269,23 @@
   "pricing.roi.assumption2": "Time saved: 2 hours per person per week",
   "pricing.roi.assumption3": "Professional plan cost: €599/month",
   "pricing.roi.assumption4": "Savings based on current communication inefficiencies",
+  "waitlist.page.title": "Join the Waitlist - Lyyli.ai",
+  "waitlist.page.description": "Join the waitlist to be among the first to experience Lyyli's AI-powered communication platform for professional service organizations.",
+  "waitlist.hero.title": "Join the waitlist",
+  "waitlist.hero.subtitle": "Be among the first to experience how AI can transform internal communication for professional service organizations",
+  "waitlist.benefits.speed.title": "Early access",
+  "waitlist.benefits.speed.description": "Get priority access when we launch",
+  "waitlist.benefits.quality.title": "Exclusive updates",
+  "waitlist.benefits.quality.description": "Receive insider information about new features",
+  "waitlist.benefits.access.title": "Special pricing",
+  "waitlist.benefits.access.description": "Access to launch discounts and special offers",
+  "waitlist.form.title": "Join the waitlist",
+  "waitlist.form.subtitle": "Fill out the form below to secure your spot on our waitlist",
+  "waitlist.info.title": "What happens next?",
+  "waitlist.info.timeline.title": "Timeline",
+  "waitlist.info.timeline.description": "We'll notify you as soon as Lyyli is available for your organization, typically within the next few months.",
+  "waitlist.info.updates.title": "Regular updates",
+  "waitlist.info.updates.description": "You'll receive monthly updates on our progress and exclusive insights into the platform's development.",
   "pricing.faq.trial.question": "How long is the free trial?",
   "pricing.faq.trial.answer": "All plans include a 14-day free trial with full access to features. No credit card required.",
   "pricing.faq.billing.question": "Can I switch plans at any time?",
