--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -270,6 +270,23 @@
   "pricing.roi.assumption2": "Säästetty aika: 2 tuntia/henkilö/viikko",
   "pricing.roi.assumption3": "Professional-paketin hinta: 599€/kk",
   "pricing.roi.assumption4": "Säästöt perustuvat nykyisiin viestintäongelmiin",
+  "waitlist.page.title": "Liity odotuslistalle - Lyyli.ai",
+  "waitlist.page.description": "Liity odotuslistalle ja ole ensimmäisten joukossa kokeilemassa Lyylin tekoälyavusteista viestintäalustaa asiantuntijaorganisaatioille.",
+  "waitlist.hero.title": "Liity odotuslistalle",
+  "waitlist.hero.subtitle": "Ole ensimmäisten joukossa kokeilemassa, miten tekoäly voi muuttaa sisäisen viestinnän asiantuntijaorganisaatioissa",
+  "waitlist.benefits.speed.title": "Aikainen pääsy",
+  "waitlist.benefits.speed.description": "Saa etuoikeutettu pääsy kun lanssaamme",
+  "waitlist.benefits.quality.title": "Eksklusiiviset päivitykset",
+  "waitlist.benefits.quality.description": "Saa sisäpiiritietoja uusista ominaisuuksista",
+  "waitlist.benefits.access.title": "Erikoishinnat",
+  "waitlist.benefits.access.description": "Pääsy lanssialennuksiin ja erikoistarjouksiin",
+  "waitlist.form.title": "Liity odotuslistalle",
+  "waitlist.form.subtitle": "Täytä alla oleva lomake varmistaaksesi paikkasi odotuslistallamme",
+  "waitlist.info.title": "Mitä tapahtuu seuraavaksi?",
+  "waitlist.info.timeline.title": "Aikajana",
+  "waitlist.info.timeline.description": "Ilmoitamme sinulle heti kun Lyyli on saatavilla organisaatiosi käyttöön, tyypillisesti seuraavien kuukausien aikana.",
+  "waitlist.info.updates.title": "Säännölliset päivitykset",
+  "waitlist.info.updates.description": "Saat kuukausittaisia päivityksiä edistymisestämme ja eksklusiivisia näkemyksiä alustan kehitykseen.",
 
   "pricing.benefits.title": "Mitattava liiketoimintavaikutus",
   "pricing.benefits.efficiency.title": "Viestinnän tehokkuus",
