Fix blog hero images, make headings clickable, update funding announcement post
- Fix hero image display for all blog posts
- Make blog post headings clickable on archive page
- Update funding announcement with new date (2025-01-27) and author (Mikko)
- Add 'Ask Mikko more' contact box
- Improve content formatting with proper spacing and bold names
- Add company-news category to translations
- Update all blog post image paths to use correct images

--- a/content/blog/en/enterprise-security-gdpr-compliance.mdx
+++ b/content/blog/en/enterprise-security-gdpr-compliance.mdx
@@ -13,7 +13,7 @@ keywords:
     "data protection compliance",
   ]
 author: "Lyyli Team"
-image: "/blog/security-compliance.jpg"
+image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
 imageAlt: "Security dashboard showing encryption status, audit trails, and GDPR compliance indicators for enterprise AI communication system"
 ---
 
