--- a/content/blog/fi/ai-viestinta-asiantuntijatiimit.mdx
+++ b/content/blog/fi/ai-viestinta-asiantuntijatiimit.mdx
@@ -12,7 +12,7 @@ keywords:
     "tiimin koordinaation tehokkuus",
   ]
 author: "Lyyli-tiimi"
-image: "/blog/ai-communication-metrics.jpg"
+image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
 imageAlt: "Kaavio, joka näyttää parantuneet viestintämittarit tekoälyavustuksella - 80% vähennys vastausajassa ja 65% vähemmän menetettyja viestejä"
 ---
 
