--- a/content/blog/fi/yritysturvallisuus-gdpr-vaatimustenmukaisuus.mdx
+++ b/content/blog/fi/yritysturvallisuus-gdpr-vaatimustenmukaisuus.mdx
@@ -13,7 +13,7 @@ keywords:
     "tietosuojavaatimustenmukaisuus",
   ]
 author: "Lyyli-tiimi"
-image: "/blog/security-compliance.jpg"
+image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
 imageAlt: "Turvallisuuskojelauta, joka näyttää salauksen tilan, auditointijäljet ja GDPR-vaatimustenmukaisuusindikaattorit yrityksen tekoälyviestintäjärjestelmälle"
 ---
 
