--- a/src/translations/en.json
+++ b/src/translations/en.json
@@ -389,6 +389,7 @@
   "blog.categories.security": "Security",
   "blog.categories.productivity": "Productivity",
   "blog.categories.compliance": "Compliance",
+  "blog.categories.company-news": "Company News",
   "blog.empty.title": "More posts coming soon",
   "blog.empty.description": "We're working on bringing you valuable insights about AI communication and enterprise security.",
 
