--- a/src/translations/fi.json
+++ b/src/translations/fi.json
@@ -392,6 +392,7 @@
   "blog.categories.security": "Turvallisuus",
   "blog.categories.productivity": "Tuottavuus",
   "blog.categories.compliance": "Compliance",
+  "blog.categories.company-news": "Yritysuutiset",
   "blog.empty.title": "Lisää kirjoituksia tulossa",
   "blog.empty.description": "Työskentelemme tuodaksemme sinulle arvokkaita näkemyksiä tekoälyviestinnästä ja yritysturvallisuudesta.",
 
