--- a/content/blog/en/ai-communication-expert-teams.mdx
+++ b/content/blog/en/ai-communication-expert-teams.mdx
@@ -12,7 +12,7 @@ keywords:
     "team coordination efficiency",
   ]
 author: "Lyyli Team"
-image: "/blog/ai-communication-metrics.jpg"
+image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
 imageAlt: "Graph showing improved communication metrics with AI assistance - 80% reduction in response time and 65% fewer missed messages"
 ---
 
