--- a/content/blog/en/lyyli-funding-announcement.mdx
+++ b/content/blog/en/lyyli-funding-announcement.mdx
@@ -64,7 +64,7 @@ Additionally, **Perttu Ahvenainen** (Sales and Marketing Director at Taitori Oy)
 
 ## Ask Mikko more
 
-<div className="bg-forest-green text-white p-6 my-8 rounded-lg">
+<div className="bg-gradient-to-br from-forest-green to-emerald-700 text-white p-8 my-8 rounded-xl shadow-lg border border-emerald-600">
 
 **Have questions about Lyyli.ai's funding round or want to learn more about our AI communication assistant?**
 
@@ -83,4 +83,12 @@ Feel free to reach out if you'd like to discuss:
 
 ---
 
-*Want to learn more about how Lyyli can help your professional service organization with communication? [Book a personalized demo](https://lyyli.ai/demo) or [contact our team](https://lyyli.ai/contact).*
+*Want to learn more about how Lyyli can help your professional service organization with communication?*
+
+<div className="text-center my-8">
+  <a href="https://lyyli.ai/demo" className="inline-block bg-forest-green hover:bg-emerald-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors duration-200 shadow-md hover:shadow-lg">
+    Book a personalized demo
+  </a>
+</div>
+
+*Or [contact our team](https://lyyli.ai/contact) for more information.*
