Fix blog post styling to match brand guidelines
- Update 'Ask Mikko more' section to use proper forest color (#2F5D50)
- Fix demo button styling to use correct forest colors and hover effects
- Update investors section border to use proper forest color
- Fix all button styling in blog post page component
- Ensure consistency with brand guidelines and existing codebase patterns
- Use bg-forest hover:bg-forest/90 for primary buttons
- Use border-forest text-forest hover:bg-forest hover:text-white for secondary buttons

--- a/content/blog/en/lyyli-funding-announcement.mdx
+++ b/content/blog/en/lyyli-funding-announcement.mdx
@@ -22,38 +22,40 @@ The company's CEO and co-founder is **Mikko Oksanen**, while the other co-founde
 
 ## Investors' confidence in professional service organizations' communication challenges
 
-"**Mikko** understands well the communication challenges of professional service organizations, and **Veikko's** expertise and broad understanding of AI technologies convinced us," says **Sannamari Nykänen**, CEO of Expion Oy, who also joins the company's board with the investment. "We have been working with **Mikko** for several years, and it's wonderful that Expion's first venture capital investment goes precisely to **Lyyli.ai's** development work."
+**"Mikko** understands well the communication challenges of professional service organizations, and **Veikko's** expertise and broad understanding of AI technologies convinced us," says **Sannamari Nykänen**, CEO of Expion Oy, who also joins the company's board with the investment. "We have been working with **Mikko** for several years, and it's wonderful that Expion's first venture capital investment goes precisely to **Lyyli.ai's** development work."
 
 With the funding, the company will finalize its product for market readiness and launch active sales in Finland for 50-1000 person professional service and project organizations, whose communication challenges are the greatest.
 
 ## AI frees communication professionals for creative work
 
-"Investor support is crucial in a startup's early stage – it brings not only capital but also experience and networks, without which progress would be significantly slower. Now we can truly show how AI can free communication professionals for creative work," states **Mikko Oksanen**, CEO of Lyyli AI Oy.
+**"Investor support is crucial in a startup's early stage – it brings not only capital but also experience and networks, without which progress would be significantly slower. Now we can truly show how AI can free communication professionals for creative work,"** states **Mikko Oksanen**, CEO of Lyyli AI Oy.
 
-"From a technical perspective, **Lyyli** is a perfect project for me, I get to combine all the expertise areas I've gathered over the years while continuously learning new things," shares CTO **Veikko Laitinen**. "The possibilities of AI in communication are enormous, and our technical solution is built scalable from the ground up. When you see how **Lyyli** learns the company's communication style and starts producing genuinely high-quality content, you realize this is the technology that truly changes how work is done in teams. It's wonderful to receive investors' support and trust in the project. It gives us the opportunity to focus fully on product development and brings us to market faster."
+**"From a technical perspective, Lyyli** is a perfect project for me, I get to combine all the expertise areas I've gathered over the years while continuously learning new things," shares CTO **Veikko Laitinen**. "The possibilities of AI in communication are enormous, and our technical solution is built scalable from the ground up. When you see how **Lyyli** learns the company's communication style and starts producing genuinely high-quality content, you realize this is the technology that truly changes how work is done in teams. It's wonderful to receive investors' support and trust in the project. It gives us the opportunity to focus fully on product development and brings us to market faster."
 
 ## Diverse expertise joins the board
 
 With the investment, **Sannamari Nykänen** joins the company's board, an experienced CFO who has led several Due Diligence processes. The board now consists of **Mikko Oksanen**, **Sannamari Nykänen**, and **Veikko Laitinen** serving as chairman.
 
-"**Sanni** brings financial management expertise and external perspective to our board's operations. It's nice that someone occasionally questions our decisions a bit," notes **Oksanen**.
+**"Sanni** brings financial management expertise and external perspective to our board's operations. It's nice that someone occasionally questions our decisions a bit," notes **Oksanen**.
 
 Additionally, **Perttu Ahvenainen** (Sales and Marketing Director at Taitori Oy) and CPA **Teemu Laitinen** (Founder of Kuittiniilo Oy) join as board advisors.
 
-"We are grateful for our investors' support and look forward to future collaboration with them. Now it's time to show how Finnish AI expertise performs in the global communication market," concludes **Oksanen**.
+**"We are grateful for our investors' support and look forward to future collaboration with them. Now it's time to show how Finnish AI expertise performs in the global communication market,"** concludes **Oksanen**.
 
 ---
 
 ## About the investors
 
-<div className="bg-gray-50 border-l-4 border-forest-green p-6 my-8 rounded-r-lg">
+<div class="bg-gray-50 border-l-4 border-forest p-6 my-8 rounded-r-lg">
 
 ### Expion
+
 **Expion** is a new Finnish family office company offering growth services and financing opportunities. The company focuses on supporting small and medium-sized companies on their path to growth and internationalization, providing companies with both financing and expert services that we have ourselves found necessary in the daily life of growth and business operations.
 
 [www.expion.fi](https://www.expion.fi)
 
 ### Redstone
+
 **Redstone** is a European venture capital company. We manage several VC funds focusing on early-stage European companies in areas such as fintech, healthcare, industrial deep tech, real estate technology, energy, and climate technology. Our largest offices are located in Berlin, Munich, Zurich, and Helsinki, and our fund portfolios include over 180 companies.
 
 [www.redstone.vc](https://www.redstone.vc)
@@ -64,19 +66,21 @@ Additionally, **Perttu Ahvenainen** (Sales and Marketing Director at Taitori Oy)
 
 ## Ask Mikko more
 
-<div className="bg-gradient-to-br from-forest-green to-emerald-700 text-white p-8 my-8 rounded-xl shadow-lg border border-emerald-600">
+<div class="bg-forest text-white p-8 my-8 rounded-xl shadow-soft">
 
 **Have questions about Lyyli.ai's funding round or want to learn more about our AI communication assistant?**
 
 I'm **Mikko Oksanen**, CEO and co-founder of Lyyli.ai. I'm passionate about solving communication challenges in professional service organizations through intelligent AI technology.
 
 Feel free to reach out if you'd like to discuss:
+
 - How AI can transform your organization's communication workflows
 - Our funding strategy and growth plans
 - Technical implementation details
 - Partnership opportunities
 
-**Contact me directly:** [mikko@lyyli.ai](mailto:mikko@lyyli.ai)  
+**Contact me directly:** [mikko@lyyli.ai](mailto:mikko@lyyli.ai)
+
 **Book a personalized demo:** [Schedule demo](https://lyyli.ai/demo)
 
 </div>
@@ -85,10 +89,14 @@ Feel free to reach out if you'd like to discuss:
 
 *Want to learn more about how Lyyli can help your professional service organization with communication?*
 
-<div className="text-center my-8">
-  <a href="https://lyyli.ai/demo" className="inline-block bg-forest-green hover:bg-emerald-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors duration-200 shadow-md hover:shadow-lg">
-    Book a personalized demo
-  </a>
+<div class="text-center my-8">
+
+<a href="https://lyyli.ai/demo" class="inline-block bg-forest text-white font-semibold py-3 px-6 rounded-lg hover:bg-forest/90 transition-colors duration-200 shadow-soft">
+
+Book a personalized demo
+
+</a>
+
 </div>
 
 *Or [contact our team](https://lyyli.ai/contact) for more information.*
