--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -16,44 +16,46 @@ Viestintäassistentti **Lyyli.ai** on saanut merkittävän pääomasijoituksen k
 
 ## Tekoälyavusteinen viestintäassistentti mullistaa yritysten viestinnän
 
-**Lyyli.ai** muuttaa sitä, miten yritykset luovat ja hallinnoivat sisältöä. Tekoälyavusteinen viestintäassistentti automatisoi rutiinitehtäviä, parantaa sisällön laatua ja varmistaa yhtenäisen viestinnän kaikilla kanavilla. Tekoälyagentti oppii yrityksen brändin, arvot ja viestintätyylin, minkä jälkeen se tuottaa yhtenäistä, laadukasta sisältöä kaikille kanaville – LinkedInistä sisäisiin uutiskirjeisiin.
+**Lyyli.ai** muuttaa sitä, miten yritykset luovat ja hallinnoivat sisältöä. Tekoälyavusteinen viestintäassistentti automatisoi rutiinitehtäviä, parantaa sisällön laatua ja varmistaa yhtenäisen viestinnän kaikilla kanavilla. Tekoälyagentti oppii yrityksen brändin, arvot ja viestintätyylin, tuottaen sitten yhtenäistä, korkealaatuista sisältöä kaikille kanaville – LinkedInistä sisäisiin uutiskirjeisiin.
 
 Yrityksen toimitusjohtaja ja perustaja on **Mikko Oksanen**, kun taas toinen perustaja **Veikko Laitinen** toimii yrityksen teknologiajohtajana.
 
 ## Sijoittajien luottamus asiantuntijaorganisaatioiden viestintähaasteisiin
 
-"**Mikko** ymmärtää hyvin asiantuntijaorganisaatioiden viestintähaasteet, ja **Veikon** asiantuntemus ja laaja ymmärrys tekoälyteknologioista vakuuttivat meidät", sanoo Expion Oyn toimitusjohtaja **Sannamari Nykänen**, joka myös liittyy yrityksen hallitukseen sijoituksen myötä. "Olemme työskennelleet **Mikon** kanssa useita vuosia, ja on hienoa, että Expionin ensimmäinen pääomasijoitus menee juuri **Lyyli.ai:n** kehitystyöhön."
+**"Mikko** ymmärtää hyvin asiantuntijaorganisaatioiden viestintähaasteet, ja **Veikon** asiantuntemus ja laaja ymmärrys tekoälyteknologioista vakuuttivat meidät," sanoo **Sannamari Nykänen**, Expion Oyn toimitusjohtaja, joka myös liittyy yrityksen hallitukseen sijoituksen myötä. "Olemme työskennelleet **Mikon** kanssa useita vuosia, ja on hienoa, että Expionin ensimmäinen pääomasijoitus menee juuri **Lyyli.ai:n** kehitystyöhön."
 
-Sijoituksen avulla yritys viimeistelee tuotteensa markkinavalmiiksi ja aloittaa aktiivisen myynnin Suomessa 50-1000 henkilön asiantuntija- ja projektiorganisaatioille, joiden viestintähaasteet ovat suurimmat.
+Rahoituksen myötä yritys viimeistelee tuotteensa markkinavalmiiksi ja aloittaa aktiivisen myynnin Suomessa 50-1000 henkilön asiantuntija- ja projektiorganisaatioille, joiden viestintähaasteet ovat suurimmat.
 
 ## Tekoäly vapauttaa viestintäammattilaiset luovaan työhön
 
-"Sijoittajien tuki on ratkaisevaa startupin varhaisvaiheessa – se tuo mukanaan paitsi pääomaa myös kokemusta ja verkostoja, ilman joita eteneminen olisi huomattavasti hitaampaa. Nyt voimme todella näyttää, miten tekoäly voi vapauttaa viestintäammattilaiset luovaan työhön", toteaa Lyyli AI Oyn toimitusjohtaja **Mikko Oksanen**.
+**"Sijoittajien tuki on ratkaisevan tärkeää startupin varhaisvaiheessa – se tuo mukanaan paitsi pääomaa, myös kokemusta ja verkostoja, ilman joita eteneminen olisi huomattavasti hitaampaa. Nyt voimme todella näyttää, miten tekoäly voi vapauttaa viestintäammattilaiset luovaan työhön,"** toteaa **Mikko Oksanen**, Lyyli AI Oyn toimitusjohtaja.
 
-"Teknisestä näkökulmasta **Lyyli** on minulle täydellinen projekti, saan yhdistää kaikki ne asiantuntemuksen alueet, joita olen kerännyt vuosien varrella, samalla kun jatkan uusien asioiden oppimista", jakaa teknologiajohtaja **Veikko Laitinen**. "Tekoälyn mahdollisuudet viestinnässä ovat valtavat, ja teknisemme ratkaisu on rakennettu skaalautuvaksi alusta alkaen. Kun näet, miten **Lyyli** oppii yrityksen viestintätyylin ja alkaa tuottaa aidosti laadukasta sisältöä, ymmärrät, että tämä on teknologia, joka todella muuttaa sitä, miten työtä tehdään tiimeissä. On hienoa saada sijoittajien tuki ja luottamus projektiin. Se antaa meille mahdollisuuden keskittyä täysin tuotekehitykseen ja tuo meidät markkinoille nopeammin."
+**"Teknisestä näkökulmasta Lyyli** on minulle täydellinen projekti, saan yhdistää kaikki asiantuntemusalueet, joita olen kerännyt vuosien varrella, samalla kun jatkan uusien asioiden oppimista," jakaa teknologiajohtaja **Veikko Laitinen**. "Tekoälyn mahdollisuudet viestinnässä ovat valtavat, ja teknisemme ratkaisumme on rakennettu skaalautuvaksi alusta alkaen. Kun näet, miten **Lyyli** oppii yrityksen viestintätyylin ja alkaa tuottaa aidosti korkealaatuista sisältöä, ymmärrät, että tämä on teknologia, joka todella muuttaa sitä, miten työtä tehdään tiimeissä. On hienoa saada sijoittajien tukea ja luottamus projektiin. Se antaa meille mahdollisuuden keskittyä täysin tuotekehitykseen ja tuo meidät markkinoille nopeammin."
 
 ## Monipuolinen asiantuntemus liittyy hallitukseen
 
 Sijoituksen myötä **Sannamari Nykänen** liittyy yrityksen hallitukseen, kokeneena talousjohtajana, joka on johtanut useita Due Diligence -prosesseja. Hallitus koostuu nyt **Mikko Oksasesta**, **Sannamari Nykäsestä** ja **Veikko Laitisesta**, joka toimii puheenjohtajana.
 
-"**Sanni** tuo taloudenhoidon asiantuntemusta ja ulkoisen näkökulman hallituksemme toimintaan. On kiva, että joku joskus kyseenalaistaa päätöksemme hieman", huomauttaa **Oksanen**.
+**"Sanni** tuo hallituksen toimintaan taloushallinnon asiantuntemusta ja ulkoista näkökulmaa. On kiva, että joku joskus kyseenalaistaa päätöksemme hieman," huomauttaa **Oksanen**.
 
-Lisäksi **Perttu Ahvenainen** (Taitori Oyn myynti- ja markkinointijohtaja) ja KHT **Teemu Laitinen** (Kuittiniilo Oyn perustaja) liittyvät hallituksen neuvonantajiksi.
+Lisäksi **Perttu Ahvenainen** (myynnin ja markkinoinnin johtaja Taitori Oyssa) ja KHT **Teemu Laitinen** (Kuittiniilo Oyn perustaja) liittyvät hallituksen neuvonantajiksi.
 
-"Olemme kiitollisia sijoittajiemme tuesta ja odotamme innolla tulevaa yhteistyötä heidän kanssaan. Nyt on aika näyttää, miten suomalainen tekoälyosaaminen suoriutuu globaalilla viestintämarkkinalla", päätää **Oksanen**.
+**"Olemme kiitollisia sijoittajiemme tuesta ja odotamme innolla tulevaa yhteistyötä heidän kanssaan. Nyt on aika näyttää, miten suomalainen tekoälyosaaminen suoriutuu globaalilla viestintämarkkinalla,"** päätää **Oksanen**.
 
 ---
 
 ## Sijoittajista
 
-<div className="bg-gray-50 border-l-4 border-forest-green p-6 my-8 rounded-r-lg">
+<div class="bg-gray-50 border-l-4 border-forest p-6 my-8 rounded-r-lg">
 
 ### Expion
-**Expion** on uusi suomalainen perheyritys, joka tarjoaa kasvupalveluita ja rahoitusmahdollisuuksia. Yritys keskittyy tukemaan pieniä ja keskisuuria yrityksiä kasvun ja kansainvälistymisen tiellä, tarjoamalla yrityksille sekä rahoitusta että asiantuntijapalveluita, joita olemme itse kokeneet tarpeellisiksi kasvun ja liiketoiminnan arjessa.
+
+**Expion** on uusi suomalainen perheyritys, joka tarjoaa kasvupalveluita ja rahoitusmahdollisuuksia. Yritys keskittyy tukemaan pieniä ja keskisuuria yrityksiä kasvun ja kansainvälistymisen tiellä, tarjoamalla yrityksille sekä rahoitusta että asiantuntijapalveluita, joita olemme itse kokeneet tarpeellisiksi kasvun ja liiketoiminnan päivittäisessä elämässä.
 
 [www.expion.fi](https://www.expion.fi)
 
 ### Redstone
+
 **Redstone** on eurooppalainen pääomasijoitusyhtiö. Hallinnoimme useita VC-rahastoja, jotka keskittyvät varhaisvaiheen eurooppalaisiin yrityksiin sellaisilla aloilla kuin fintech, terveydenhuolto, teollinen deep tech, kiinteistöteknologia, energia ja ilmastoteknologia. Suurimmat toimistomme sijaitsevat Berliinissä, Münchenissä, Zürichissä ja Helsingissä, ja rahastomme salkut sisältävät yli 180 yritystä.
 
 [www.redstone.vc](https://www.redstone.vc)
@@ -64,31 +66,37 @@ Lisäksi **Perttu Ahvenainen** (Taitori Oyn myynti- ja markkinointijohtaja) ja K
 
 ## Kysy Mikolta lisää
 
-<div className="bg-gradient-to-br from-forest-green to-emerald-700 text-white p-8 my-8 rounded-xl shadow-lg border border-emerald-600">
+<div class="bg-forest text-white p-8 my-8 rounded-xl shadow-soft">
 
 **Onko sinulla kysymyksiä Lyyli.ai:n rahoituskierroksesta tai haluatko tietää lisää tekoälyavusteisesta viestintäassistentistamme?**
 
-Olen **Mikko Oksanen**, Lyyli.ai:n toimitusjohtaja ja perustaja. Olen innostunut ratkaisemaan asiantuntijaorganisaatioiden viestintähaasteita älykkään tekoälyteknologian avulla.
+Olen **Mikko Oksanen**, Lyyli.ai:n toimitusjohtaja ja perustaja. Olen innostunut ratkaisemaan viestintähaasteita asiantuntijaorganisaatioissa älykkään tekoälyteknologian avulla.
 
-Ota yhteyttä, jos haluat keskustella:
-- Siitä, miten tekoäly voi muuttaa organisaatiosi viestintätyönkulkuja
+Ota rohkeasti yhteyttä, jos haluat keskustella:
+
+- Miten tekoäly voi muuttaa organisaatiosi viestintätyönkulkuja
 - Rahoitusstrategiastamme ja kasvusuunnitelmistamme
 - Teknisistä toteutustiedoista
 - Yhteistyömahdollisuuksista
 
-**Ota yhteyttä suoraan:** [mikko@lyyli.ai](mailto:mikko@lyyli.ai)  
+**Ota minuun suoraan yhteyttä:** [mikko@lyyli.ai](mailto:mikko@lyyli.ai)
+
 **Varaa henkilökohtainen demo:** [Aikatauluta demo](https://lyyli.ai/demo)
 
 </div>
 
 ---
 
-*Haluatko tietää lisää siitä, miten Lyyli voi auttaa asiantuntijaorganisaatiotasi viestinnässä?*
+*Haluatko tietää lisää siitä, miten Lyyli voi auttaa asiantuntijaorganisaatiosi viestinnässä?*
 
-<div className="text-center my-8">
-  <a href="https://lyyli.ai/demo" className="inline-block bg-forest-green hover:bg-emerald-700 text-white font-semibold py-3 px-6 rounded-lg transition-colors duration-200 shadow-md hover:shadow-lg">
-    Varaa henkilökohtainen demo
-  </a>
+<div class="text-center my-8">
+
+<a href="https://lyyli.ai/demo" class="inline-block bg-forest text-white font-semibold py-3 px-6 rounded-lg hover:bg-forest/90 transition-colors duration-200 shadow-soft">
+
+Varaa henkilökohtainen demo
+
+</a>
+
 </div>
 
 *Tai [ota yhteyttä tiimiimme](https://lyyli.ai/contact) saadaksesi lisätietoja.*
