Update blog post publishing date and image text\n\n- Change publishing date from January 27, 2025 to August 10, 2025\n- Update image alt text to: 'Expion and South Savo Growth Fund (handled by Redstone) join to Lyyli.ai's journey'\n- Update both English and Finnish versions\n- Maintain proper formatting and styling

--- a/content/blog/en/lyyli-funding-announcement.mdx
+++ b/content/blog/en/lyyli-funding-announcement.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Lyyli.ai secures venture capital funding to accelerate development – revolutionizing business communication with AI"
 description: "Lyyli.ai has received significant venture capital funding backed by Expion and Redstone's South Savo Growth Fund. The investment accelerates development and go-to-market of the AI-powered communication assistant."
-date: "2025-01-27"
+date: "2025-08-10"
 readTime: 8
 category: "company-news"
 keywords: ["venture capital", "AI", "communication assistant", "professional service organizations", "startup", "funding", "Expion", "Redstone"]
 author: "Mikko Oksanen"
 image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
-imageAlt: "Lyyli.ai founders Mikko Oksanen and Veikko Laitinen celebrating the venture capital investment"
+imageAlt: "Expion and South Savo Growth Fund (handled by Redstone) join to Lyyli.ai's journey."
 ---
 
 # Lyyli.ai secures venture capital funding to accelerate development – revolutionizing business communication with AI
