--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -1,13 +1,13 @@
 ---
 title: "Lyyli.ai:n kehitystä vauhdittamaan pääomasijoittajia – mullistaa yritysten viestinnän tekoälyllä"
 description: "Lyyli.ai on saanut merkittävän pääomasijoituksen Expionin ja Redstonen hallinnoiman South Savo Growth Fundin tukemana. Sijoitus vauhdittaa tekoälyavusteisen viestintäassistentin kehitystä ja markkinointia."
-date: "2025-01-27"
+date: "2025-08-10"
 readTime: 8
 category: "company-news"
 keywords: ["pääomasijoitus", "tekoäly", "viestintäassistentti", "asiantuntijaorganisaatio", "startup", "rahoitus", "Expion", "Redstone"]
 author: "Mikko Oksanen"
 image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
-imageAlt: "Lyyli.ai:n perustajat Mikko Oksanen ja Veikko Laitinen juhlimassa pääomasijoituksen saamista"
+imageAlt: "Expion ja South Savo Growth Fund (Redstonen hallinnoima) liittyvät Lyyli.ai:n matkaan."
 ---
 
 # Lyyli.ai:n kehitystä vauhdittamaan pääomasijoittajia – mullistaa yritysten viestinnän tekoälyllä
