Update blog posts with funding announcement content

--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -36,7 +36,7 @@ Rahoituksen myötä yritys viimeistelee tuotteensa markkinavalmiiksi ja aloittaa
 
 Sijoituksen myötä **Sannamari Nykänen** liittyy yrityksen hallitukseen, kokeneena talousjohtajana, joka on johtanut useita Due Diligence -prosesseja. Hallitus koostuu nyt **Mikko Oksasesta**, **Sannamari Nykäsestä** ja **Veikko Laitisesta**, joka toimii puheenjohtajana.
 
-**"Sanni** tuo hallituksen toimintaan taloushallinnon asiantuntemusta ja ulkoista näkökulmaa. On kiva, että joku joskus kyseenalaistaa päätöksemme hieman," huomauttaa **Oksanen**.
+"Sannis tuo hallituksen toimintaan taloushallinnon asiantuntemusta ja ulkoista näkökulmaa. On kiva, että joku joskus kyseenalaistaa päätöksemme hieman," huomauttaa **Oksanen**.
 
 Lisäksi **Perttu Ahvenainen** (myynnin ja markkinoinnin johtaja Taitori Oyssa) ja KHT **Teemu Laitinen** (Kuittiniilo Oyn perustaja) liittyvät hallituksen neuvonantajiksi.
 
