Sync Finnish blog post formatting with English version

--- a/content/blog/en/lyyli-funding-announcement.mdx
+++ b/content/blog/en/lyyli-funding-announcement.mdx
@@ -15,7 +15,7 @@ imageAlt: "Expion and South Savo Growth Fund (handled by Redstone) join to Lyyli
 Communication assistant **Lyyli.ai** has received significant venture capital funding to accelerate growth. **Expion** and **Redstone's** South Savo Growth Fund support the company that automates and streamlines businesses' internal and external communication with intelligent technology.
 
 
-## AI-powered communication assistant transforms business communication
+## **AI-powered communication assistant transforms business communication**
 
 **Lyyli.ai** is changing how companies create and manage content. The AI-powered communication assistant automates routine tasks, improves content quality, and ensures consistent communication across all channels. The AI agent learns the company's brand, values, and communication style, then produces consistent, high-quality content for all channels – from LinkedIn to internal newsletters.
 
