--- a/content/blog/fi/lyyli-funding-announcement.mdx
+++ b/content/blog/fi/lyyli-funding-announcement.mdx
@@ -22,15 +22,15 @@ Yrityksen toimitusjohtaja ja perustaja on **Mikko Oksanen**, kun taas toinen per
 
 ## Sijoittajien luottamus asiantuntijaorganisaatioiden viestintähaasteisiin
 
-**"Mikko** ymmärtää hyvin asiantuntijaorganisaatioiden viestintähaasteet, ja **Veikon** asiantuntemus ja laaja ymmärrys tekoälyteknologioista vakuuttivat meidät," sanoo **Sannamari Nykänen**, Expion Oyn toimitusjohtaja, joka myös liittyy yrityksen hallitukseen sijoituksen myötä. "Olemme työskennelleet **Mikon** kanssa useita vuosia, ja on hienoa, että Expionin ensimmäinen pääomasijoitus menee juuri **Lyyli.ai:n** kehitystyöhön."
+"Mikko ymmärtää hyvin asiantuntijaorganisaatioiden viestintähaasteet, ja Veikon asiantuntemus ja laaja ymmärrys tekoälyteknologioista vakuuttivat meidät," sanoo **Sannamari Nykänen**, Expion Oyn toimitusjohtaja, joka myös liittyy yrityksen hallitukseen sijoituksen myötä. "Olemme työskennelleet Mikon kanssa useita vuosia, ja on hienoa, että Expionin ensimmäinen pääomasijoitus menee juuri **Lyyli.ai:n** kehitystyöhön."
 
 Rahoituksen myötä yritys viimeistelee tuotteensa markkinavalmiiksi ja aloittaa aktiivisen myynnin Suomessa 50-1000 henkilön asiantuntija- ja projektiorganisaatioille, joiden viestintähaasteet ovat suurimmat.
 
 ## Tekoäly vapauttaa viestintäammattilaiset luovaan työhön
 
-**"Sijoittajien tuki on ratkaisevan tärkeää startupin varhaisvaiheessa – se tuo mukanaan paitsi pääomaa, myös kokemusta ja verkostoja, ilman joita eteneminen olisi huomattavasti hitaampaa. Nyt voimme todella näyttää, miten tekoäly voi vapauttaa viestintäammattilaiset luovaan työhön,"** toteaa **Mikko Oksanen**, Lyyli AI Oyn toimitusjohtaja.
+"Sijoittajien tuki on ratkaisevan tärkeää startupin varhaisvaiheessa – se tuo mukanaan paitsi pääomaa, myös kokemusta ja verkostoja, ilman joita eteneminen olisi huomattavasti hitaampaa. Nyt voimme todella näyttää, miten tekoäly voi vapauttaa viestintäammattilaiset luovaan työhön," toteaa Mikko, Lyyli AI Oyn toimitusjohtaja.
 
-**"Teknisestä näkökulmasta Lyyli** on minulle täydellinen projekti, saan yhdistää kaikki asiantuntemusalueet, joita olen kerännyt vuosien varrella, samalla kun jatkan uusien asioiden oppimista," jakaa teknologiajohtaja **Veikko Laitinen**. "Tekoälyn mahdollisuudet viestinnässä ovat valtavat, ja teknisemme ratkaisumme on rakennettu skaalautuvaksi alusta alkaen. Kun näet, miten **Lyyli** oppii yrityksen viestintätyylin ja alkaa tuottaa aidosti korkealaatuista sisältöä, ymmärrät, että tämä on teknologia, joka todella muuttaa sitä, miten työtä tehdään tiimeissä. On hienoa saada sijoittajien tukea ja luottamus projektiin. Se antaa meille mahdollisuuden keskittyä täysin tuotekehitykseen ja tuo meidät markkinoille nopeammin."
+"Teknisestä näkökulmasta Lyyli.ai on minulle täydellinen projekti, saan yhdistää kaikki asiantuntemusalueet, joita olen kerännyt vuosien varrella, samalla kun jatkan uusien asioiden oppimista," jakaa teknologiajohtaja **Veikko Laitinen**. "Tekoälyn mahdollisuudet viestinnässä ovat valtavat, ja teknisemme ratkaisumme on rakennettu skaalautuvaksi alusta alkaen. Kun näet, miten **Lyyli** oppii yrityksen viestintätyylin ja alkaa tuottaa aidosti korkealaatuista sisältöä, ymmärrät, että tämä on teknologia, joka todella muuttaa sitä, miten työtä tehdään tiimeissä. On hienoa saada sijoittajien tukea ja luottamus projektiin. Se antaa meille mahdollisuuden keskittyä täysin tuotekehitykseen ja tuo meidät markkinoille nopeammin."
 
 ## Monipuolinen asiantuntemus liittyy hallitukseen
 
@@ -38,9 +38,9 @@ Sijoituksen myötä **Sannamari Nykänen** liittyy yrityksen hallitukseen, koken
 
 "Sannis tuo hallituksen toimintaan taloushallinnon asiantuntemusta ja ulkoista näkökulmaa. On kiva, että joku joskus kyseenalaistaa päätöksemme hieman," huomauttaa **Oksanen**.
 
-Lisäksi **Perttu Ahvenainen** (myynnin ja markkinoinnin johtaja Taitori Oyssa) ja KHT **Teemu Laitinen** (Kuittiniilo Oyn perustaja) liittyvät hallituksen neuvonantajiksi.
+Lisäksi KHT **Teemu Laitinen** (Kuittiniilo Oyn perustaja) liittyy hallituksen neuvonantajaksi.
 
-**"Olemme kiitollisia sijoittajiemme tuesta ja odotamme innolla tulevaa yhteistyötä heidän kanssaan. Nyt on aika näyttää, miten suomalainen tekoälyosaaminen suoriutuu globaalilla viestintämarkkinalla,"** päätää **Oksanen**.
+"Olemme kiitollisia sijoittajiemme tuesta ja odotamme innolla tulevaa yhteistyötä heidän kanssaan. Nyt on aika näyttää, miten suomalainen tekoälyosaaminen suoriutuu globaalilla viestintämarkkinalla," päätää **Oksanen**.
 
 ---
 
