Update AI communication blog post hero image to Features_hero.png

--- a/content/blog/en/ai-communication-expert-teams.mdx
+++ b/content/blog/en/ai-communication-expert-teams.mdx
@@ -12,8 +12,8 @@ keywords:
     "team coordination efficiency",
   ]
 author: "Lyyli Team"
-image: "/images/blog/Lyyli.ai sijoittajauutinen-2.png"
-imageAlt: "Graph showing improved communication metrics with AI assistance - 80% reduction in response time and 65% fewer missed messages"
+image: "/images/features/Features_hero.png"
+imageAlt: "Minimalist illustration of a smiling woman surrounded by digital communication icons including Slack, LinkedIn, email, and web browser symbols representing modern workplace communication tools"
 ---
 
 # How AI Communication Tools Transform Expert Team Efficiency
